# FP_StreamTimelapse

./: .gitignore  INSTALL_CONFIG.md  README.md  TODO.md  USAGE.md  crontab.txt  frame_subset.sh  start_timelapse.sh  tl_calc.py  tl_gen.sh
BPStreamViewer/: BPStreamViewer.cbp  BPStreamViewer.depend  BPStreamViewer.layout  Makefile  README.md  image.cpp  image.h  main.cpp
cloud_streaming/: README.md
cloud_streaming/pi/: PI_SETUP.md  imageWatcher.py  tlUpload.py  upload_failed_images.sh  upload_frame.sh
cloud_streaming/server/: SERVER_SETUP.md  generate_video.php  get_image_gps.php  gps_log_viewer.html  index.html  live_stream.html  mjps.sh  process_upload.sh  timelapse.php  timelapse_viewer.html  tl_gen.sh  upload.php  upload_tl_frame.php
cloud_streaming/server/equi_gen/: Makefile  equi_gen.c  equi_gen.h  equi_gen_buf.cpp  equi_gen_buf.h  main.c  main.cpp
mjpg-streamer/: start.sh
mjpg-streamer/plugins/input_testpicture/: testpictures.h
stream_tl/: get_gps.py  gpio_halt.sh  haversine.py  recovery.sh  start_gpsd.sh  start_timelapse.sh  stop_gpsd.sh  stop_timelapse.sh
stream_tl/mjpg-streamer/: mjpg_streamer
stream_tl/streaming_timelapse/: CMakeLists.txt  equi_gen_buf.cpp  equi_gen_buf.h  gpio.cpp  gpio.h  gps.cpp  gps.h  gps_util.cpp  main.cpp  streaming_timelapse
streaming_timelapse/: CMakeCache.txt  Makefile  cmake_install.cmake
