cmake_minimum_required (VERSION 2.6)
project(streaming_timelapse)
find_package(OpenCV REQUIRED)
include_directories(.)
link_directories(/usr/local/lib)
link_directories(/usr/usr/lib/arm-linux-gnueabihf)
add_executable(streaming_timelapse main.cpp equi_gen_buf.cpp gpio.cpp gps_util.cpp)
target_link_libraries(streaming_timelapse ${OpenCV_LIBS} exiv2 gps)
